# xSDKTrilinos

./: CMakeLists.txt  Copyright.txt  LICENSE  PackagesList.cmake  ProjectName.cmake  README.md  TPLsList.cmake  Version.cmake
cmake/: Dependencies.cmake  xSDKTrilinos_config.hpp.in
cmake/tpls/: FindTPLTrilinosPkgsTpl.cmake  FindTPLTrilinosTpl.cmake  FindTPLTrilinosTplsTpl.cmake
doc/: wrappers.tex
doc/xSDK_manual/: .gitignore  abstract.tex  acknowledgement.tex  appendix.tex  hypre_example1.tex  hypre_example2.tex  hypre_interfaces.tex  installation.tex  interfaces.tex  introduction.tex  petsc_example1.tex  petsc_example2.tex  petsc_example3.tex  petsc_interfaces.tex  superlu_interfaces.tex  user_manual.tex
doc/xSDK_manual/src/: Hypre_BelosEx.cpp  Hypre_SolveEx.cpp  PETSc_Amesos2Ex.cpp  PETSc_AnasaziEx.cpp  SuperLU_Amesos2Ex.cpp  Tpetra_KSPEx.cpp  do-configure
example/: CMakeLists.txt
example/hypre/: HypreEx.cpp  Hypre_BelosEx.cpp  Hypre_SolveEx.cpp
example/petsc/: Amesos2Test.cpp  AnasaziTest.cpp  CMakeLists.txt  EpetraPETScExFile.cpp  PETSc_Amesos2Ex.cpp  PETSc_MueLuEx.cpp  TpetraExt_petsc.cpp  TpetraPETScExFile.cpp  Tpetra_KSPEx.cpp
example/tpetra/: CMakeLists.txt  GmresPoisson1DUserMatEx.cpp  MinresDiagonalUserOpEx.cpp  MinresPoisson2DUserOpEx.cpp
hypre/: CMakeLists.txt
hypre/example/: CMakeLists.txt  Hypre_BelosEx.cpp  Hypre_SolveEx.cpp
hypre/src/: CMakeLists.txt  Ifpack2_Hypre.cpp  Ifpack2_Hypre.hpp
hypre/test/: CMakeLists.txt  hypre_UnitTest.cpp
petsc/example/: CMakeLists.txt  Epetra_KSPEx.cpp  PETSc_Amesos2Ex.cpp  PETSc_AnasaziEx.cpp  PETSc_Ifpack2Ex.cpp  PETSc_MueLuEx.cpp  Tpetra_KSPEx.cpp
petsc/src/: BelosPETScSolMgr.cpp  BelosPETScSolMgr.hpp  CMakeLists.txt  Tpetra_PETScAIJGraph.cpp  Tpetra_PETScAIJGraph.hpp  Tpetra_PETScAIJMatrix.cpp  Tpetra_PETScAIJMatrix.hpp
petsc/test/: CMakeLists.txt  PETScAIJMatrix_UnitTests.cpp
scripts/: do-configure-fissile4  do-configure-trilinos-fissile4  do-configure-universal
src/: BelosPETScSolMgr.cpp  BelosPETScSolMgr.hpp  CMakeLists.txt  Ifpack2_Hypre.hpp  Tpetra_PETScAIJGraph.cpp  Tpetra_PETScAIJGraph.hpp  Tpetra_PETScAIJMatrix.cpp  Tpetra_PETScAIJMatrix.hpp
test/: CMakeLists.txt
test/hypre/: CMakeLists.txt  HypreAcceptableMapTest.cpp  HypreBadMapTest.cpp  HypreNoFillCompleteTest.cpp  hypre_UnitTest.cpp
test/petsc/: PETScAIJMatrix_UnitTests.cpp
